Parser/bin/parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Unused terminals:

    KW_case
    KW_yield
    KW_lazy
    KW_with
    KW_do
    KW_sealed
    KW_final
    KW_Try
    KW_forSome
    TOK_at
    TOK_ignore
    KW_implicit
    KW_abstract
    TOK_nl
    TOK_long
    KW_this
    KW_catch
    KW_type
    KW_finally
    KW_super
    KW_throw
    KW_match
    KW_or
    TOK_eq_gt
    TOK_hash
    KW_trait
    KW_import
    KW_package
    TOK_error
    TOK_cmnt

Grammar

Rule 0     S' -> compilation_unit
Rule 1     compilation_unit -> class_and_obj_declarations
Rule 2     class_and_obj_declarations -> class_and_obj_declaration
Rule 3     class_and_obj_declarations -> class_and_obj_declarations class_and_obj_declaration
Rule 4     class_and_obj_declaration -> singleton_object
Rule 5     class_and_obj_declaration -> class_declaration
Rule 6     singleton_object -> object_declaration block
Rule 7     object_declaration -> KW_obj TOK_identifier
Rule 8     block -> TOK_lcurly block_stats_star TOK_rcurly
Rule 9     block_stats_star -> block_stats
Rule 10    block_stats_star -> empty
Rule 11    block_stats -> block_stat
Rule 12    block_stats -> block_stats block_stat
Rule 13    block_stat -> local_variable_declaration_statement
Rule 14    block_stat -> statement
Rule 15    block_stat -> class_and_obj_declaration
Rule 16    block_stat -> method_declaration
Rule 17    expression_question -> expression
Rule 18    expression_question -> empty
Rule 19    expression -> assignment_expression
Rule 20    assignment_expression -> assignment
Rule 21    assignment_expression -> conditional_or_expression
Rule 22    assignment_expression -> if_else_expression
Rule 23    if_else_expression -> KW_if TOK_paraleft expression TOK_pararight expression KW_else expression
Rule 24    assignment -> left_hand_side assignment_operator assignment_expression
Rule 25    left_hand_side -> id
Rule 26    left_hand_side -> array_access
Rule 27    id -> name
Rule 28    id -> qualified_id
Rule 29    qualified_id -> name TOK_dot name
Rule 30    name -> TOK_identifier
Rule 31    array_access -> id dimension
Rule 32    dimension -> dimension TOK_lsqb expression TOK_rsqb
Rule 33    dimension -> TOK_lsqb expression TOK_rsqb
Rule 34    assignment_operator -> TOK_assignment
Rule 35    assignment_operator -> TOK_mulassign
Rule 36    assignment_operator -> TOK_divassign
Rule 37    assignment_operator -> TOK_modassign
Rule 38    assignment_operator -> TOK_addassign
Rule 39    assignment_operator -> TOK_subassign
Rule 40    conditional_or_expression -> conditional_and_expression
Rule 41    conditional_or_expression -> conditional_or_expression TOK_or conditional_and_expression
Rule 42    conditional_and_expression -> inclusive_or_expression
Rule 43    conditional_and_expression -> conditional_and_expression TOK_and inclusive_or_expression
Rule 44    inclusive_or_expression -> exclusive_or_expression
Rule 45    inclusive_or_expression -> inclusive_or_expression TOK_or_bitwise exclusive_or_expression
Rule 46    exclusive_or_expression -> and_expression
Rule 47    exclusive_or_expression -> exclusive_or_expression TOK_xor and_expression
Rule 48    and_expression -> equality_expression
Rule 49    and_expression -> and_expression TOK_and_bitwise equality_expression
Rule 50    equality_expression -> relational_expression
Rule 51    equality_expression -> equality_expression TOK_equal relational_expression
Rule 52    equality_expression -> equality_expression TOK_nequal relational_expression
Rule 53    relational_expression -> shift_expression
Rule 54    relational_expression -> relational_expression TOK_greater shift_expression
Rule 55    relational_expression -> relational_expression TOK_lesser shift_expression
Rule 56    relational_expression -> relational_expression TOK_geq shift_expression
Rule 57    relational_expression -> relational_expression TOK_leq shift_expression
Rule 58    shift_expression -> additive_expression
Rule 59    shift_expression -> shift_expression TOK_lshift additive_expression
Rule 60    shift_expression -> shift_expression TOK_rshift additive_expression
Rule 61    additive_expression -> multiplicative_expression
Rule 62    additive_expression -> additive_expression TOK_plus multiplicative_expression
Rule 63    additive_expression -> additive_expression TOK_minus multiplicative_expression
Rule 64    multiplicative_expression -> unary_expression
Rule 65    multiplicative_expression -> multiplicative_expression TOK_times unary_expression
Rule 66    multiplicative_expression -> multiplicative_expression TOK_divide unary_expression
Rule 67    multiplicative_expression -> multiplicative_expression TOK_modulus unary_expression
Rule 68    unary_expression -> TOK_plus unary_expression
Rule 69    unary_expression -> TOK_minus unary_expression
Rule 70    unary_expression -> unary_expression_not_plus_minus
Rule 71    unary_expression_not_plus_minus -> base_variable_set
Rule 72    unary_expression_not_plus_minus -> TOK_tilda unary_expression
Rule 73    unary_expression_not_plus_minus -> TOK_not unary_expression
Rule 74    unary_expression_not_plus_minus -> cast_expression
Rule 75    base_variable_set -> variable_literal
Rule 76    base_variable_set -> TOK_paraleft expression TOK_pararight
Rule 77    variable_literal -> left_hand_side
Rule 78    variable_literal -> primary
Rule 79    cast_expression -> TOK_paraleft primitive_type TOK_pararight unary_expression
Rule 80    primary -> literal
Rule 81    primary -> method_invocation
Rule 82    literal -> int_float
Rule 83    literal -> c_literal
Rule 84    c_literal -> TOK_char
Rule 85    c_literal -> TOK_string
Rule 86    c_literal -> KW_true
Rule 87    c_literal -> KW_false
Rule 88    c_literal -> KW_null
Rule 89    int_float -> TOK_float
Rule 90    int_float -> TOK_int
Rule 91    method_invocation -> id TOK_paraleft argument_list_question TOK_pararight
Rule 92    argument_list -> expression
Rule 93    argument_list -> argument_list TOK_comma expression
Rule 94    argument_list_question -> argument_list
Rule 95    argument_list_question -> empty
Rule 96    modifier -> KW_protected
Rule 97    modifier -> KW_private
Rule 98    modifier_question -> modifier
Rule 99    modifier_question -> empty
Rule 100   declaration_keyword -> KW_var
Rule 101   declaration_keyword -> KW_val
Rule 102   local_variable_declaration_statement -> local_variable_declaration TOK_semi
Rule 103   local_variable_declaration -> modifier_question declaration_keyword variable_declaration_body
Rule 104   variable_declaration_initializer -> expression
Rule 105   variable_declaration_initializer -> array_initializer
Rule 106   variable_declaration_initializer -> class_initializer
Rule 107   variable_argument_list -> variable_declaration_initializer
Rule 108   variable_argument_list -> variable_argument_list TOK_comma variable_declaration_initializer
Rule 109   variable_declaration_body -> identifiers type_question TOK_assignment variable_declaration_initializer
Rule 110   variable_declaration_body -> TOK_paraleft variable_list TOK_pararight TOK_assignment TOK_paraleft variable_argument_list TOK_pararight
Rule 111   identifiers -> identifiers TOK_comma TOK_identifier
Rule 112   identifiers -> TOK_identifier
Rule 113   variable_list -> variable_dec
Rule 114   variable_list -> variable_list TOK_comma variable_dec
Rule 115   variable_dec -> TOK_identifier type_question
Rule 116   expr_question -> TOK_assignment variable_declaration_initializer
Rule 117   expr_question -> empty
Rule 118   variable_declarator_id -> TOK_identifier TOK_colon type
Rule 119   type -> primitive_type
Rule 120   type -> reference_type
Rule 121   primitive_type -> KW_int
Rule 122   primitive_type -> KW_double
Rule 123   primitive_type -> KW_char
Rule 124   primitive_type -> KW_string
Rule 125   primitive_type -> KW_boolean
Rule 126   primitive_type -> KW_void
Rule 127   reference_type -> class_data_type
Rule 128   reference_type -> array_data_type
Rule 129   class_data_type -> id
Rule 130   array_data_type -> KW_array TOK_lsqb type TOK_rsqb
Rule 131   array_initializer -> KW_new KW_array TOK_lsqb type TOK_rsqb TOK_paraleft conditional_or_expression TOK_pararight
Rule 132   array_initializer -> KW_array TOK_paraleft argument_list_question TOK_pararight
Rule 133   array_initializer -> KW_array TOK_lsqb type TOK_rsqb TOK_paraleft argument_list_question TOK_pararight
Rule 134   array_initializer -> multidimensional_array_initializer
Rule 135   multidimensional_array_initializer -> KW_array TOK_dot KW_ofdim TOK_lsqb type TOK_rsqb TOK_paraleft argument_list TOK_pararight
Rule 136   class_initializer -> KW_new name TOK_paraleft argument_list_question TOK_pararight
Rule 137   statement -> normal_statement
Rule 138   statement -> if_then_statement
Rule 139   statement -> if_then_else_statement
Rule 140   statement -> while_statement
Rule 141   statement -> for_statement
Rule 142   normal_statement -> block
Rule 143   normal_statement -> expression_statement
Rule 144   normal_statement -> empty_statement
Rule 145   normal_statement -> return_statement
Rule 146   expression_statement -> statement_expression TOK_semi
Rule 147   statement_expression -> assignment
Rule 148   statement_expression -> method_invocation
Rule 149   if_then_statement -> KW_if TOK_paraleft expression TOK_pararight statement
Rule 150   if_then_else_statement -> KW_if TOK_paraleft expression TOK_pararight if_then_else_intermediate KW_else statement
Rule 151   if_then_else_statement_precedence -> KW_if TOK_paraleft expression TOK_pararight if_then_else_intermediate KW_else if_then_else_intermediate
Rule 152   if_then_else_intermediate -> normal_statement
Rule 153   if_then_else_intermediate -> if_then_else_statement_precedence
Rule 154   while_statement -> KW_while TOK_paraleft expression TOK_pararight statement
Rule 155   for_statement -> KW_for TOK_paraleft for_logic TOK_pararight statement
Rule 156   for_logic -> for_update
Rule 157   for_logic -> for_update TOK_semi for_logic
Rule 158   for_update -> for_loop for_step_opts
Rule 159   for_loop -> TOK_identifier TOK_choose expression for_untilTo expression
Rule 160   for_untilTo -> KW_until
Rule 161   for_untilTo -> KW_to
Rule 162   for_step_opts -> KW_by expression
Rule 163   for_step_opts -> empty
Rule 164   empty_statement -> TOK_semi
Rule 165   return_statement -> KW_return expression_question TOK_semi
Rule 166   class_declaration -> class_header class_body
Rule 167   class_header -> KW_class name modifier_question class_param_clause_question class_template_question
Rule 168   class_param_clause_question -> class_param_clause
Rule 169   class_param_clause_question -> empty
Rule 170   class_param_clause -> TOK_paraleft class_params_question TOK_pararight
Rule 171   class_params_question -> class_params
Rule 172   class_params_question -> empty
Rule 173   class_params -> class_param
Rule 174   class_params -> class_params TOK_comma class_param
Rule 175   class_param -> class_declaration_keyword_question variable_declarator_id expr_question
Rule 176   override_question -> override
Rule 177   override_question -> empty
Rule 178   override -> KW_override
Rule 179   class_declaration_keyword_question -> override_question modifier_question declaration_keyword
Rule 180   class_declaration_keyword_question -> empty
Rule 181   type_question -> TOK_colon type
Rule 182   type_question -> empty
Rule 183   class_template_question -> class_template
Rule 184   class_template_question -> empty
Rule 185   class_template -> KW_extends name TOK_paraleft variable_list TOK_pararight
Rule 186   class_body -> block
Rule 187   method_declaration -> method_header method_body
Rule 188   method_header -> KW_def fun_def
Rule 189   fun_def -> fun_sig type_question TOK_assignment
Rule 190   fun_def -> fun_sig type_question
Rule 191   fun_sig -> name fun_param_clause
Rule 192   fun_param_clause -> TOK_paraleft fun_params_question TOK_pararight
Rule 193   fun_params_question -> fun_params
Rule 194   fun_params_question -> empty
Rule 195   fun_params -> fun_param
Rule 196   fun_params -> fun_params TOK_comma fun_param
Rule 197   fun_param -> variable_declarator_id expr_question
Rule 198   method_body -> block
Rule 199   method_body -> variable_declaration_initializer
Rule 200   empty -> <empty>

Terminals, with rules where they appear

KW_Try               : 
KW_abstract          : 
KW_array             : 130 131 132 133 135
KW_boolean           : 125
KW_by                : 162
KW_case              : 
KW_catch             : 
KW_char              : 123
KW_class             : 167
KW_def               : 188
KW_do                : 
KW_double            : 122
KW_else              : 23 150 151
KW_extends           : 185
KW_false             : 87
KW_final             : 
KW_finally           : 
KW_for               : 155
KW_forSome           : 
KW_if                : 23 149 150 151
KW_implicit          : 
KW_import            : 
KW_int               : 121
KW_lazy              : 
KW_match             : 
KW_new               : 131 136
KW_null              : 88
KW_obj               : 7
KW_ofdim             : 135
KW_or                : 
KW_override          : 178
KW_package           : 
KW_private           : 97
KW_protected         : 96
KW_return            : 165
KW_sealed            : 
KW_string            : 124
KW_super             : 
KW_this              : 
KW_throw             : 
KW_to                : 161
KW_trait             : 
KW_true              : 86
KW_type              : 
KW_until             : 160
KW_val               : 101
KW_var               : 100
KW_void              : 126
KW_while             : 154
KW_with              : 
KW_yield             : 
TOK_addassign        : 38
TOK_and              : 43
TOK_and_bitwise      : 49
TOK_assignment       : 34 109 110 116 189
TOK_at               : 
TOK_char             : 84
TOK_choose           : 159
TOK_cmnt             : 
TOK_colon            : 118 181
TOK_comma            : 93 108 111 114 174 196
TOK_divassign        : 36
TOK_divide           : 66
TOK_dot              : 29 135
TOK_eq_gt            : 
TOK_equal            : 51
TOK_error            : 
TOK_float            : 89
TOK_geq              : 56
TOK_greater          : 54
TOK_hash             : 
TOK_identifier       : 7 30 111 112 115 118 159
TOK_ignore           : 
TOK_int              : 90
TOK_lcurly           : 8
TOK_leq              : 57
TOK_lesser           : 55
TOK_long             : 
TOK_lshift           : 59
TOK_lsqb             : 32 33 130 131 133 135
TOK_minus            : 63 69
TOK_modassign        : 37
TOK_modulus          : 67
TOK_mulassign        : 35
TOK_nequal           : 52
TOK_nl               : 
TOK_not              : 73
TOK_or               : 41
TOK_or_bitwise       : 45
TOK_paraleft         : 23 76 79 91 110 110 131 132 133 135 136 149 150 151 154 155 170 185 192
TOK_pararight        : 23 76 79 91 110 110 131 132 133 135 136 149 150 151 154 155 170 185 192
TOK_plus             : 62 68
TOK_rcurly           : 8
TOK_rshift           : 60
TOK_rsqb             : 32 33 130 131 133 135
TOK_semi             : 102 146 157 164 165
TOK_string           : 85
TOK_subassign        : 39
TOK_tilda            : 72
TOK_times            : 65
TOK_xor              : 47
error                : 

Nonterminals, with rules where they appear

additive_expression  : 58 59 60 62 63
and_expression       : 46 47 49
argument_list        : 93 94 135
argument_list_question : 91 132 133 136
array_access         : 26
array_data_type      : 128
array_initializer    : 105
assignment           : 20 147
assignment_expression : 19 24
assignment_operator  : 24
base_variable_set    : 71
block                : 6 142 186 198
block_stat           : 11 12
block_stats          : 9 12
block_stats_star     : 8
c_literal            : 83
cast_expression      : 74
class_and_obj_declaration : 2 3 15
class_and_obj_declarations : 1 3
class_body           : 166
class_data_type      : 127
class_declaration    : 5
class_declaration_keyword_question : 175
class_header         : 166
class_initializer    : 106
class_param          : 173 174
class_param_clause   : 168
class_param_clause_question : 167
class_params         : 171 174
class_params_question : 170
class_template       : 183
class_template_question : 167
compilation_unit     : 0
conditional_and_expression : 40 41 43
conditional_or_expression : 21 41 131
declaration_keyword  : 103 179
dimension            : 31 32
empty                : 10 18 95 99 117 163 169 172 177 180 182 184 194
empty_statement      : 144
equality_expression  : 48 49 51 52
exclusive_or_expression : 44 45 47
expr_question        : 175 197
expression           : 17 23 23 23 32 33 76 92 93 104 149 150 151 154 159 159 162
expression_question  : 165
expression_statement : 143
for_logic            : 155 157
for_loop             : 158
for_statement        : 141
for_step_opts        : 158
for_untilTo          : 159
for_update           : 156 157
fun_def              : 188
fun_param            : 195 196
fun_param_clause     : 191
fun_params           : 193 196
fun_params_question  : 192
fun_sig              : 189 190
id                   : 25 31 91 129
identifiers          : 109 111
if_else_expression   : 22
if_then_else_intermediate : 150 151 151
if_then_else_statement : 139
if_then_else_statement_precedence : 153
if_then_statement    : 138
inclusive_or_expression : 42 43 45
int_float            : 82
left_hand_side       : 24 77
literal              : 80
local_variable_declaration : 102
local_variable_declaration_statement : 13
method_body          : 187
method_declaration   : 16
method_header        : 187
method_invocation    : 81 148
modifier             : 98
modifier_question    : 103 167 179
multidimensional_array_initializer : 134
multiplicative_expression : 61 62 63 65 66 67
name                 : 27 29 29 136 167 185 191
normal_statement     : 137 152
object_declaration   : 6
override             : 176
override_question    : 179
primary              : 78
primitive_type       : 79 119
qualified_id         : 28
reference_type       : 120
relational_expression : 50 51 52 54 55 56 57
return_statement     : 145
shift_expression     : 53 54 55 56 57 59 60
singleton_object     : 4
statement            : 14 149 150 154 155
statement_expression : 146
type                 : 118 130 131 133 135 181
type_question        : 109 115 189 190
unary_expression     : 64 65 66 67 68 69 72 73 79
unary_expression_not_plus_minus : 70
variable_argument_list : 108 110
variable_dec         : 113 114
variable_declaration_body : 103
variable_declaration_initializer : 107 108 109 116 199
variable_declarator_id : 175 197
variable_list        : 110 114 185
variable_literal     : 75
while_statement      : 140

Parsing method: LALR

state 0

    (0) S' -> . compilation_unit
    (1) compilation_unit -> . class_and_obj_declarations
    (2) class_and_obj_declarations -> . class_and_obj_declaration
    (3) class_and_obj_declarations -> . class_and_obj_declarations class_and_obj_declaration
    (4) class_and_obj_declaration -> . singleton_object
    (5) class_and_obj_declaration -> . class_declaration
    (6) singleton_object -> . object_declaration block
    (166) class_declaration -> . class_header class_body
    (7) object_declaration -> . KW_obj TOK_identifier
    (167) class_header -> . KW_class name modifier_question class_param_clause_question class_template_question

    KW_obj          shift and go to state 6
    KW_class        shift and go to state 3

    class_and_obj_declaration      shift and go to state 1
    class_and_obj_declarations     shift and go to state 2
    compilation_unit               shift and go to state 4
    class_declaration              shift and go to state 5
    object_declaration             shift and go to state 7
    singleton_object               shift and go to state 8
    class_header                   shift and go to state 9

state 1

    (2) class_and_obj_declarations -> class_and_obj_declaration .

    KW_obj          reduce using rule 2 (class_and_obj_declarations -> class_and_obj_declaration .)
    KW_class        reduce using rule 2 (class_and_obj_declarations -> class_and_obj_declaration .)
    $end            reduce using rule 2 (class_and_obj_declarations -> class_and_obj_declaration .)


state 2

    (1) compilation_unit -> class_and_obj_declarations .
    (3) class_and_obj_declarations -> class_and_obj_declarations . class_and_obj_declaration
    (4) class_and_obj_declaration -> . singleton_object
    (5) class_and_obj_declaration -> . class_declaration
    (6) singleton_object -> . object_declaration block
    (166) class_declaration -> . class_header class_body
    (7) object_declaration -> . KW_obj TOK_identifier
    (167) class_header -> . KW_class name modifier_question class_param_clause_question class_template_question

    $end            reduce using rule 1 (compilation_unit -> class_and_obj_declarations .)
    KW_obj          shift and go to state 6
    KW_class        shift and go to state 3

    class_and_obj_declaration      shift and go to state 10
    class_declaration              shift and go to state 5
    object_declaration             shift and go to state 7
    singleton_object               shift and go to state 8
    class_header                   shift and go to state 9

state 3

    (167) class_header -> KW_class . name modifier_question class_param_clause_question class_template_question
    (30) name -> . TOK_identifier

    TOK_identifier  shift and go to state 12

    name                           shift and go to state 11

state 4

    (0) S' -> compilation_unit .



state 5

    (5) class_and_obj_declaration -> class_declaration .

    KW_if           reduce using rule 5 (class_and_obj_declaration -> class_declaration .)
    KW_while        reduce using rule 5 (class_and_obj_declaration -> class_declaration .)
    KW_for          reduce using rule 5 (class_and_obj_declaration -> class_declaration .)
    KW_def          reduce using rule 5 (class_and_obj_declaration -> class_declaration .)
    TOK_lcurly      reduce using rule 5 (class_and_obj_declaration -> class_declaration .)
    TOK_semi        reduce using rule 5 (class_and_obj_declaration -> class_declaration .)
    KW_return       reduce using rule 5 (class_and_obj_declaration -> class_declaration .)
    KW_obj          reduce using rule 5 (class_and_obj_declaration -> class_declaration .)
    KW_class        reduce using rule 5 (class_and_obj_declaration -> class_declaration .)
    KW_protected    reduce using rule 5 (class_and_obj_declaration -> class_declaration .)
    KW_private      reduce using rule 5 (class_and_obj_declaration -> class_declaration .)
    TOK_identifier  reduce using rule 5 (class_and_obj_declaration -> class_declaration .)
    KW_var          reduce using rule 5 (class_and_obj_declaration -> class_declaration .)
    KW_val          reduce using rule 5 (class_and_obj_declaration -> class_declaration .)
    TOK_rcurly      reduce using rule 5 (class_and_obj_declaration -> class_declaration .)
    $end            reduce using rule 5 (class_and_obj_declaration -> class_declaration .)


state 6

    (7) object_declaration -> KW_obj . TOK_identifier

    TOK_identifier  shift and go to state 13


state 7

    (6) singleton_object -> object_declaration . block
    (8) block -> . TOK_lcurly block_stats_star TOK_rcurly

    TOK_lcurly      shift and go to state 14

    block                          shift and go to state 15

state 8

    (4) class_and_obj_declaration -> singleton_object .

    KW_if           reduce using rule 4 (class_and_obj_declaration -> singleton_object .)
    KW_while        reduce using rule 4 (class_and_obj_declaration -> singleton_object .)
    KW_for          reduce using rule 4 (class_and_obj_declaration -> singleton_object .)
    KW_def          reduce using rule 4 (class_and_obj_declaration -> singleton_object .)
    TOK_lcurly      reduce using rule 4 (class_and_obj_declaration -> singleton_object .)
    TOK_semi        reduce using rule 4 (class_and_obj_declaration -> singleton_object .)
    KW_return       reduce using rule 4 (class_and_obj_declaration -> singleton_object .)
    KW_obj          reduce using rule 4 (class_and_obj_declaration -> singleton_object .)
    KW_class        reduce using rule 4 (class_and_obj_declaration -> singleton_object .)
    KW_protected    reduce using rule 4 (class_and_obj_declaration -> singleton_object .)
    KW_private      reduce using rule 4 (class_and_obj_declaration -> singleton_object .)
    TOK_identifier  reduce using rule 4 (class_and_obj_declaration -> singleton_object .)
    KW_var          reduce using rule 4 (class_and_obj_declaration -> singleton_object .)
    KW_val          reduce using rule 4 (class_and_obj_declaration -> singleton_object .)
    TOK_rcurly      reduce using rule 4 (class_and_obj_declaration -> singleton_object .)
    $end            reduce using rule 4 (class_and_obj_declaration -> singleton_object .)


state 9

    (166) class_declaration -> class_header . class_body
    (186) class_body -> . block
    (8) block -> . TOK_lcurly block_stats_star TOK_rcurly

    TOK_lcurly      shift and go to state 14

    class_body                     shift and go to state 16
    block                          shift and go to state 17

state 10

    (3) class_and_obj_declarations -> class_and_obj_declarations class_and_obj_declaration .

    KW_obj          reduce using rule 3 (class_and_obj_declarations -> class_and_obj_declarations class_and_obj_declaration .)
    KW_class        reduce using rule 3 (class_and_obj_declarations -> class_and_obj_declarations class_and_obj_declaration .)
    $end            reduce using rule 3 (class_and_obj_declarations -> class_and_obj_declarations class_and_obj_declaration .)


state 11

    (167) class_header -> KW_class name . modifier_question class_param_clause_question class_template_question
    (98) modifier_question -> . modifier
    (99) modifier_question -> . empty
    (96) modifier -> . KW_protected
    (97) modifier -> . KW_private
    (200) empty -> .

    KW_protected    shift and go to state 21
    KW_private      shift and go to state 19
    TOK_paraleft    reduce using rule 200 (empty -> .)
    KW_extends      reduce using rule 200 (empty -> .)
    TOK_lcurly      reduce using rule 200 (empty -> .)

    modifier_question              shift and go to state 20
    modifier                       shift and go to state 18
    empty                          shift and go to state 22

state 12

    (30) name -> TOK_identifier .

    TOK_dot         reduce using rule 30 (name -> TOK_identifier .)
    TOK_rsqb        reduce using rule 30 (name -> TOK_identifier .)
    TOK_paraleft    reduce using rule 30 (name -> TOK_identifier .)
    TOK_lsqb        reduce using rule 30 (name -> TOK_identifier .)
    TOK_assignment  reduce using rule 30 (name -> TOK_identifier .)
    TOK_mulassign   reduce using rule 30 (name -> TOK_identifier .)
    TOK_divassign   reduce using rule 30 (name -> TOK_identifier .)
    TOK_modassign   reduce using rule 30 (name -> TOK_identifier .)
    TOK_addassign   reduce using rule 30 (name -> TOK_identifier .)
    TOK_subassign   reduce using rule 30 (name -> TOK_identifier .)
    TOK_times       reduce using rule 30 (name -> TOK_identifier .)
    TOK_divide      reduce using rule 30 (name -> TOK_identifier .)
    TOK_modulus     reduce using rule 30 (name -> TOK_identifier .)
    TOK_plus        reduce using rule 30 (name -> TOK_identifier .)
    TOK_minus       reduce using rule 30 (name -> TOK_identifier .)
    TOK_lshift      reduce using rule 30 (name -> TOK_identifier .)
    TOK_rshift      reduce using rule 30 (name -> TOK_identifier .)
    TOK_greater     reduce using rule 30 (name -> TOK_identifier .)
    TOK_lesser      reduce using rule 30 (name -> TOK_identifier .)
    TOK_geq         reduce using rule 30 (name -> TOK_identifier .)
    TOK_leq         reduce using rule 30 (name -> TOK_identifier .)
    TOK_equal       reduce using rule 30 (name -> TOK_identifier .)
    TOK_nequal      reduce using rule 30 (name -> TOK_identifier .)
    TOK_and_bitwise reduce using rule 30 (name -> TOK_identifier .)
    TOK_xor         reduce using rule 30 (name -> TOK_identifier .)
    TOK_or_bitwise  reduce using rule 30 (name -> TOK_identifier .)
    TOK_and         reduce using rule 30 (name -> TOK_identifier .)
    TOK_or          reduce using rule 30 (name -> TOK_identifier .)
    KW_if           reduce using rule 30 (name -> TOK_identifier .)
    KW_while        reduce using rule 30 (name -> TOK_identifier .)
    KW_for          reduce using rule 30 (name -> TOK_identifier .)
    KW_def          reduce using rule 30 (name -> TOK_identifier .)
    TOK_lcurly      reduce using rule 30 (name -> TOK_identifier .)
    TOK_semi        reduce using rule 30 (name -> TOK_identifier .)
    KW_return       reduce using rule 30 (name -> TOK_identifier .)
    KW_obj          reduce using rule 30 (name -> TOK_identifier .)
    KW_class        reduce using rule 30 (name -> TOK_identifier .)
    KW_protected    reduce using rule 30 (name -> TOK_identifier .)
    KW_private      reduce using rule 30 (name -> TOK_identifier .)
    TOK_identifier  reduce using rule 30 (name -> TOK_identifier .)
    KW_var          reduce using rule 30 (name -> TOK_identifier .)
    KW_val          reduce using rule 30 (name -> TOK_identifier .)
    TOK_rcurly      reduce using rule 30 (name -> TOK_identifier .)
    TOK_comma       reduce using rule 30 (name -> TOK_identifier .)
    TOK_pararight   reduce using rule 30 (name -> TOK_identifier .)
    KW_until        reduce using rule 30 (name -> TOK_identifier .)
    KW_to           reduce using rule 30 (name -> TOK_identifier .)
    KW_else         reduce using rule 30 (name -> TOK_identifier .)
    KW_by           reduce using rule 30 (name -> TOK_identifier .)
    KW_new          reduce using rule 30 (name -> TOK_identifier .)
    KW_array        reduce using rule 30 (name -> TOK_identifier .)
    TOK_tilda       reduce using rule 30 (name -> TOK_identifier .)
    TOK_not         reduce using rule 30 (name -> TOK_identifier .)
    TOK_float       reduce using rule 30 (name -> TOK_identifier .)
    TOK_int         reduce using rule 30 (name -> TOK_identifier .)
    TOK_char        reduce using rule 30 (name -> TOK_identifier .)
    TOK_string      reduce using rule 30 (name -> TOK_identifier .)
    KW_true         reduce using rule 30 (name -> TOK_identifier .)
    KW_false        reduce using rule 30 (name -> TOK_identifier .)
    KW_null         reduce using rule 30 (name -> TOK_identifier .)
    KW_extends      reduce using rule 30 (name -> TOK_identifier .)


state 13

    (7) object_declaration -> KW_obj TOK_identifier .

    TOK_lcurly      reduce using rule 7 (object_declaration -> KW_obj TOK_identifier .)


state 14

    (8) block -> TOK_lcurly . block_stats_star TOK_rcurly
    (9) block_stats_star -> . block_stats
    (10) block_stats_star -> . empty
    (11) block_stats -> . block_stat
    (12) block_stats -> . block_stats block_stat
    (200) empty -> .
    (13) block_stat -> . local_variable_declaration_statement
    (14) block_stat -> . statement
    (15) block_stat -> . class_and_obj_declaration
    (16) block_stat -> . method_declaration
    (102) local_variable_declaration_statement -> . local_variable_declaration TOK_semi
    (137) statement -> . normal_statement
    (138) statement -> . if_then_statement
    (139) statement -> . if_then_else_statement
    (140) statement -> . while_statement
    (141) statement -> . for_statement
    (4) class_and_obj_declaration -> . singleton_object
    (5) class_and_obj_declaration -> . class_declaration
    (187) method_declaration -> . method_header method_body
    (103) local_variable_declaration -> . modifier_question declaration_keyword variable_declaration_body
    (142) normal_statement -> . block
    (143) normal_statement -> . expression_statement
    (144) normal_statement -> . empty_statement
    (145) normal_statement -> . return_statement
    (149) if_then_statement -> . KW_if TOK_paraleft expression TOK_pararight statement
    (150) if_then_else_statement -> . KW_if TOK_paraleft expression TOK_pararight if_then_else_intermediate KW_else statement
    (154) while_statement -> . KW_while TOK_paraleft expression TOK_pararight statement
    (155) for_statement -> . KW_for TOK_paraleft for_logic TOK_pararight statement
    (6) singleton_object -> . object_declaration block
    (166) class_declaration -> . class_header class_body
    (188) method_header -> . KW_def fun_def
    (98) modifier_question -> . modifier
    (99) modifier_question -> . empty
    (8) block -> . TOK_lcurly block_stats_star TOK_rcurly
    (146) expression_statement -> . statement_expression TOK_semi
    (164) empty_statement -> . TOK_semi
    (165) return_statement -> . KW_return expression_question TOK_semi
    (7) object_declaration -> . KW_obj TOK_identifier
    (167) class_header -> . KW_class name modifier_question class_param_clause_question class_template_question
    (96) modifier -> . KW_protected
    (97) modifier -> . KW_private
    (147) statement_expression -> . assignment
    (148) statement_expression -> . method_invocation
    (24) assignment -> . left_hand_side assignment_operator assignment_expression
    (91) method_invocation -> . id TOK_paraleft argument_list_question TOK_pararight
    (25) left_hand_side -> . id
    (26) left_hand_side -> . array_access
    (27) id -> . name
    (28) id -> . qualified_id
    (31) array_access -> . id dimension
    (30) name -> . TOK_identifier
    (29) qualified_id -> . name TOK_dot name

    TOK_rcurly      reduce using rule 200 (empty -> .)
    KW_var          reduce using rule 200 (empty -> .)
    KW_val          reduce using rule 200 (empty -> .)
    KW_if           shift and go to state 39
    KW_while        shift and go to state 54
    KW_for          shift and go to state 33
    KW_def          shift and go to state 36
    TOK_lcurly      shift and go to state 14
    TOK_semi        shift and go to state 50
    KW_return       shift and go to state 51
    KW_obj          shift and go to state 6
    KW_class        shift and go to state 3
    KW_protected    shift and go to state 21
    KW_private      shift and go to state 19
    TOK_identifier  shift and go to state 12

    expression_statement           shift and go to state 23
    object_declaration             shift and go to state 7
    block_stat                     shift and go to state 24
    normal_statement               shift and go to state 25
    block_stats_star               shift and go to state 26
    if_then_statement              shift and go to state 27
    left_hand_side                 shift and go to state 28
    array_access                   shift and go to state 29
    id                             shift and go to state 30
    class_and_obj_declaration      shift and go to state 31
    method_declaration             shift and go to state 32
    return_statement               shift and go to state 34
    while_statement                shift and go to state 35
    statement                      shift and go to state 37
    statement_expression           shift and go to state 38
    method_invocation              shift and go to state 45
    empty                          shift and go to state 40
    for_statement                  shift and go to state 41
    local_variable_declaration_statement shift and go to state 42
    assignment                     shift and go to state 43
    modifier_question              shift and go to state 44
    singleton_object               shift and go to state 8
    class_header                   shift and go to state 9
    name                           shift and go to state 46
    qualified_id                   shift and go to state 47
    method_header                  shift and go to state 48
    empty_statement                shift and go to state 49
    class_declaration              shift and go to state 5
    local_variable_declaration     shift and go to state 52
    block_stats                    shift and go to state 53
    modifier                       shift and go to state 18
    block                          shift and go to state 55
    if_then_else_statement         shift and go to state 56

state 15

    (6) singleton_object -> object_declaration block .
